testsuite/tests/contrib/lkt_semantic/enum_subclasses/test.out
Resolving test.lkt
==================
Id   <RefId "EnClass" test.lkt:8:21-8:28>
     references <EnumClassDecl "EnClass" test.lkt:4:1-6:2>

Id   <RefId "SubclassB" test.lkt:8:29-8:38>
     references <EnumClassAltDecl "SubclassB" test.lkt:5:21-5:30>

Id   <RefId "EnClass" test.lkt:8:41-8:48>
     references <EnumClassDecl "EnClass" test.lkt:4:1-6:2>

Id   <RefId "SubclassB" test.lkt:8:49-8:58>
     references <EnumClassAltDecl "SubclassB" test.lkt:5:21-5:30>

Expr <CallExpr test.lkt:8:41-8:60>
     has type <EnumClassAltDecl "SubclassB" test.lkt:5:21-5:30>

test.lkt:10:33: error: Cannot find entity `SubclassB` in this scope
 9 | @invalid val invalid_en_class : SubclassB = SubclassB()
   |                                 ^^^^^^^^^              

test.lkt:10:45: error: Cannot find entity `SubclassB` in this scope
 9 | @invalid val invalid_en_class : SubclassB = SubclassB()
   |                                             ^^^^^^^^^  

